# sk8-view

./: .gitignore  CMakeLists.txt  README.md  sk8view
shaders/: compile_shaders.bat
src/: Log.h  Sk8view.cpp  Sk8view.h  VulkanUtils.h  main.cpp
src/BufferUtils/: BufferUtils.cpp  BufferUtils.h
src/IndexBuffer/: IndexBuffer.cpp  IndexBuffer.h
src/Vertex/: Vertex.cpp  Vertex.h
src/VertexBuffer/: VertexBuffer.cpp  VertexBuffer.h
